# coincenter

./: .clang-tidy  .clang-tidy-ignore  .clangd  .dockerignore  .gitignore  CMakeLists.txt  CONFIG.md  Dockerfile  INSTALL.md  LICENSE  README.md  TRADING.md  alpine.Dockerfile  conanfile.txt  vcpkg.json
src/api/: CMakeLists.txt
src/api-objects/: CMakeLists.txt
src/api-objects/include/: apikey.hpp  apikeysprovider.hpp  balanceoptions.hpp  baseconstraints.hpp  closed-order.hpp  deposit.hpp  depositsconstraints.hpp  exchangeprivateapitypes.hpp  exchangepublicapitypes.hpp  opened-order.hpp  order.hpp  ordersconstraints.hpp  publictrade.hpp  recentdeposit.hpp  tradedamounts.hpp  tradedefinitions.hpp  tradeinfo.hpp  tradeoptions.hpp  withdraw.hpp  withdrawinfo.hpp  withdrawoptions.hpp  withdrawordeposit.hpp  withdrawsconstraints.hpp  withdrawsordepositsconstraints.hpp
src/api-objects/src/: apikeysprovider.cpp  closed-order.cpp  deposit.cpp  depositsconstraints.cpp  opened-order.cpp  order.cpp  ordersconstraints.cpp  publictrade.cpp  recentdeposit.cpp  tradedamounts.cpp  tradeoptions.cpp  withdrawinfo.cpp  withdrawoptions.cpp  withdrawordeposit.cpp  withdrawsordepositsconstraints.cpp
src/api-objects/test/: baseconstraints_test.cpp  closed-order_test.cpp  deposit_test.cpp  depositsconstraints_test.cpp  ordersconstraints_test.cpp  recentdeposit_test.cpp  tradeoptions_test.cpp  withdraw_test.cpp  withdrawsordepositsconstraints_test.cpp
src/api/common/: CMakeLists.txt
src/api/exchanges/: CMakeLists.txt
src/api/interface/: CMakeLists.txt
src/basic-objects/: CMakeLists.txt
src/basic-objects/include/: apioutputtype.hpp  apiquerytypeenum.hpp  cct_const.hpp  coincentercommandtype.hpp  currencycode.hpp  currencycodeset.hpp  currencycodevector.hpp  default-data-dir.hpp  deposit-addresses-file-name.hpp  exchange-name-enum.hpp  file.hpp  generic-object-json.hpp  market.hpp  monetary-amount-vector.hpp  monetaryamount.hpp  monetaryamountbycurrencyset.hpp  priceoptionsdef.hpp  reader.hpp  writer.hpp
src/basic-objects/src/: apioutputtype.cpp  coincentercommandtype.cpp  file.cpp  loadconfiguration.cpp  market.cpp  monetaryamount.cpp  priceoptionsdef.cpp  reader.cpp  writer.cpp
src/basic-objects/test/: currencycode_test.cpp  market_test.cpp  monetaryamount_test.cpp  monetaryamountbycurrencyset_test.cpp
src/engine/: CMakeLists.txt
src/engine/include/: auto-trade-options.hpp  auto-trade-processor.hpp  balanceperexchangeportfolio.hpp  coincenter-commands-iterator.hpp  coincenter-commands-processor.hpp  coincenter.hpp  coincentercommand.hpp  coincentercommandfactory.hpp  coincentercommands.hpp  coincentercommandtype.hpp  coincenterinfo_create.hpp  coincenteroptions.hpp  coincenteroptionsdef.hpp  coincenterparsedoptions.hpp  commandlineoption.hpp  commandlineoptionsparser.hpp  commandlineoptionsparseriterator.hpp  exchangesorchestrator.hpp  market-auto-trade-options.hpp  metricsexporter.hpp  parseoptions.hpp  printqueryresults.hpp  processcommandsfromcli.hpp  public-exchange-auto-trade-options.hpp  query-result-type-helpers.hpp  queryresultprinter.hpp  queryresulttypes.hpp  replay-algorithm-name-iterator.hpp  replay-options.hpp  staticcommandlineoptioncheck.hpp  stringoptionparser.hpp  traderesult.hpp  transferablecommandresult.hpp
src/engine/src/: auto-trade-options.cpp  auto-trade-processor.cpp  balanceperexchangeportfolio.cpp  coincenter-commands-iterator.cpp  coincenter-commands-processor.cpp  coincenter.cpp  coincentercommand.cpp  coincentercommandfactory.cpp  coincentercommands.cpp  coincentercommandtype.cpp  coincenterinfo_create.cpp  coincenteroptions.cpp  coincenterparsedoptions.cpp  commandlineoption.cpp  commandlineoptionsparseriterator.hpp  exchangesorchestrator.cpp  main.cpp  market-auto-trade-options.cpp  metricsexporter.cpp  printqueryresults.cpp  processcommandsfromcli.cpp  query-result-schema.hpp  query-result-type-helpers.cpp  queryresultprinter.cpp  replay-algorithm-name-iterator.cpp  replay-options.cpp  stringoptionparser.cpp  traderesult.cpp  transferablecommandresult.cpp
src/engine/test/: coincentercommandfactory_test.cpp  coincenteroptions_test.cpp  commandlineoptionsparser_test.cpp  exchangedata_test.hpp  exchangesorchestrator_private_test.cpp  exchangesorchestrator_public_test.cpp  exchangesorchestrator_test.cpp  exchangesorchestrator_trade_test.cpp  queryresultprinter_base_test.hpp  queryresultprinter_private_test.cpp  queryresultprinter_public_test.cpp  queryresultprinter_test.cpp  replay-algorithm-name-iterator_test.cpp  stringoptionparser_test.cpp  transferablecommandresult_test.cpp
src/http-request/: CMakeLists.txt
src/http-request/include/: besturlpicker.hpp  curlhandle.hpp  curlmetrics.hpp  curloptions.hpp  curlpostdata.hpp  httprequesttype.hpp  invariant-request-retry.hpp  permanentcurloptions.hpp  query-retry-policy.hpp  request-retry.hpp
src/http-request/src/: besturlpicker.cpp  curlhandle.cpp  curlmetrics.cpp
src/http-request/test/: besturlpicker_test.cpp  curlhandle_test.cpp  permanentcurloptions_test.cpp
src/main/: CMakeLists.txt
src/main/src/: main.cpp  processcommandsfromcli.cpp  processcommandsfromcli.hpp
src/main/test/: processcommandsfromcli_test.cpp
src/monitoring/: CMakeLists.txt
src/monitoring/include/: abstractmetricgateway.hpp  metric.hpp  monitoringinfo.hpp  prometheusmetricgateway.hpp  voidmetricgateway.hpp
src/monitoring/src/: metric.cpp  monitoringinfo.cpp  prometheusmetricgateway.cpp  voidmetricgateway.cpp
src/objects/: CMakeLists.txt
src/objects/include/: accountowner.hpp  amount-price.hpp  apikey.hpp  apikeysprovider.hpp  apioutputtype.hpp  apiquerytypeenum.hpp  auto-trade-stop-criterion.hpp  automation-config.hpp  balanceportfolio.hpp  coincentercommandtype.hpp  coincenterinfo.hpp  currencycode.hpp  currencycodeset.hpp  currencyexchange.hpp  currencyexchangeflatset.hpp  exchange-names.hpp  exchangeconfig.hpp  exchangeconfigmap.hpp  exchangeconfigparser.hpp  exchangeinfo.hpp  file.hpp  (+40 more)
src/schema/: CMakeLists.txt
src/serialization/: CMakeLists.txt
src/tech/: CMakeLists.txt
src/tools/: CMakeLists.txt
(+465 files in other folders)
